--- a/index.html
+++ b/index.html
@@ -53,32 +53,13 @@
           <div class="swiper">
             <div class="swiper-wrapper">
               <div class="swiper-slide">
-                <img src="/1.webp" alt="item1" />
+                <img src="1.webp" alt="item1" />
               </div>
               <div class="swiper-slide">
-                <img src="/1.webp" alt="item1" />
+                <img src="1.webp" alt="item1" />
               </div>
               <div class="swiper-slide">
-                <img src="/1.webp" alt="item1" />
-              </div>
-            </div>
-            <div class="swiper-pagination"></div>
-          </div>
-          <h4>Насадка подвійна</h4>
-          <h5>3199 <span>грн</span></h5>
-          <a href="#" class="button-37">Замовити</a>
-        </div>
-                <div class="item">
-          <div class="swiper">
-            <div class="swiper-wrapper">
-              <div class="swiper-slide">
-                <img src="/1.webp" alt="item1" />
-              </div>
-              <div class="swiper-slide">
-                <img src="/1.webp" alt="item1" />
-              </div>
-              <div class="swiper-slide">
-                <img src="/1.webp" alt="item1" />
+                <img src="1.webp" alt="item1" />
               </div>
             </div>
             <div class="swiper-pagination"></div>
@@ -91,32 +72,13 @@
           <div class="swiper">
             <div class="swiper-wrapper">
               <div class="swiper-slide">
-                <img src="/1.webp" alt="item1" />
+                <img src="1.webp" alt="item1" />
               </div>
               <div class="swiper-slide">
-                <img src="/1.webp" alt="item1" />
+                <img src="1.webp" alt="item1" />
               </div>
               <div class="swiper-slide">
-                <img src="/1.webp" alt="item1" />
-              </div>
-            </div>
-            <div class="swiper-pagination"></div>
-          </div>
-          <h4>Насадка подвійна</h4>
-          <h5>3199 <span>грн</span></h5>
-          <a href="#" class="button-37">Замовити</a>
-        </div>
-                <div class="item">
-          <div class="swiper">
-            <div class="swiper-wrapper">
-              <div class="swiper-slide">
-                <img src="/1.webp" alt="item1" />
-              </div>
-              <div class="swiper-slide">
-                <img src="/1.webp" alt="item1" />
-              </div>
-              <div class="swiper-slide">
-                <img src="/1.webp" alt="item1" />
+                <img src="1.webp" alt="item1" />
               </div>
             </div>
             <div class="swiper-pagination"></div>
@@ -129,13 +91,13 @@
           <div class="swiper">
             <div class="swiper-wrapper">
               <div class="swiper-slide">
-                <img src="/1.webp" alt="item1" />
+                <img src="1.webp" alt="item1" />
               </div>
               <div class="swiper-slide">
-                <img src="/1.webp" alt="item1" />
+                <img src="1.webp" alt="item1" />
               </div>
               <div class="swiper-slide">
-                <img src="/1.webp" alt="item1" />
+                <img src="1.webp" alt="item1" />
               </div>
             </div>
             <div class="swiper-pagination"></div>
@@ -148,13 +110,51 @@
           <div class="swiper">
             <div class="swiper-wrapper">
               <div class="swiper-slide">
-                <img src="/1.webp" alt="item1" />
+                <img src="1.webp" alt="item1" />
               </div>
               <div class="swiper-slide">
-                <img src="/1.webp" alt="item1" />
+                <img src="1.webp" alt="item1" />
               </div>
               <div class="swiper-slide">
-                <img src="/1.webp" alt="item1" />
+                <img src="1.webp" alt="item1" />
+              </div>
+            </div>
+            <div class="swiper-pagination"></div>
+          </div>
+          <h4>Насадка подвійна</h4>
+          <h5>3199 <span>грн</span></h5>
+          <a href="#" class="button-37">Замовити</a>
+        </div>
+                <div class="item">
+          <div class="swiper">
+            <div class="swiper-wrapper">
+              <div class="swiper-slide">
+                <img src="1.webp" alt="item1" />
+              </div>
+              <div class="swiper-slide">
+                <img src="1.webp" alt="item1" />
+              </div>
+              <div class="swiper-slide">
+                <img src="1.webp" alt="item1" />
+              </div>
+            </div>
+            <div class="swiper-pagination"></div>
+          </div>
+          <h4>Насадка подвійна</h4>
+          <h5>3199 <span>грн</span></h5>
+          <a href="#" class="button-37">Замовити</a>
+        </div>
+                <div class="item">
+          <div class="swiper">
+            <div class="swiper-wrapper">
+              <div class="swiper-slide">
+                <img src="1.webp" alt="item1" />
+              </div>
+              <div class="swiper-slide">
+                <img src="1.webp" alt="item1" />
+              </div>
+              <div class="swiper-slide">
+                <img src="1.webp" alt="item1" />
               </div>
             </div>
             <div class="swiper-pagination"></div>
