--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             </div>
             <div class="swiper-pagination"></div>
           </div>
-          <h4>Насадка подвійна</h4>
+          <h4>Насадка подвійна LRT5528</h4>
           <h5>3199 <span>грн</span></h5>
           <a href="#" class="button-37">Замовити</a>
         </div>
@@ -83,7 +83,7 @@
             </div>
             <div class="swiper-pagination"></div>
           </div>
-          <h4>Насадка подвійна</h4>
+          <h4>Насадка подвійна LRT5528</h4>
           <h5>3199 <span>грн</span></h5>
           <a href="#" class="button-37">Замовити</a>
         </div>
@@ -102,7 +102,7 @@
             </div>
             <div class="swiper-pagination"></div>
           </div>
-          <h4>Насадка подвійна</h4>
+          <h4>Насадка подвійна LRT5528</h4>
           <h5>3199 <span>грн</span></h5>
           <a href="#" class="button-37">Замовити</a>
         </div>
@@ -121,7 +121,7 @@
             </div>
             <div class="swiper-pagination"></div>
           </div>
-          <h4>Насадка подвійна</h4>
+          <h4>Насадка подвійна LRT5528</h4>
           <h5>3199 <span>грн</span></h5>
           <a href="#" class="button-37">Замовити</a>
         </div>
@@ -140,7 +140,7 @@
             </div>
             <div class="swiper-pagination"></div>
           </div>
-          <h4>Насадка подвійна</h4>
+          <h4>Насадка подвійна LRT5528</h4>
           <h5>3199 <span>грн</span></h5>
           <a href="#" class="button-37">Замовити</a>
         </div>
@@ -159,7 +159,7 @@
             </div>
             <div class="swiper-pagination"></div>
           </div>
-          <h4>Насадка подвійна</h4>
+          <h4>Насадка подвійна LRT5528</h4>
           <h5>3199 <span>грн</span></h5>
           <a href="#" class="button-37">Замовити</a>
         </div>
