--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
               <li class="menu__item">
                 <a class="menu__link" href="#">Home</a>
               </li>
-              <li class="menu__item">
+              <!-- <li class="menu__item">
                 <a class="menu__link" href="#">Shop</a>
-              </li>
+              </li> -->
               <li class="menu__item">
-                <a class="menu__link" href="#">Contacts</a>
+                <a class="menu__link" href="#footer">Contacts</a>
               </li>
             </ul>
           </nav>
@@ -49,17 +49,17 @@
     </header>
     <div class="container-main">
       <div class="item-row">
-                <div class="item">
+<div class="item">
           <div class="swiper">
             <div class="swiper-wrapper">
               <div class="swiper-slide">
                 <img src="1.webp" alt="item1" />
               </div>
               <div class="swiper-slide">
-                <img src="1.webp" alt="item1" />
+                <img src="2.jpg" alt="item1" />
               </div>
               <div class="swiper-slide">
-                <img src="1.webp" alt="item1" />
+                <img src="3.jpg" alt="item1" />
               </div>
             </div>
             <div class="swiper-pagination"></div>
@@ -68,17 +68,17 @@
           <h5>3199 <span>грн</span></h5>
           <a href="#" class="button-37">Замовити</a>
         </div>
-                <div class="item">
+        <div class="item">
           <div class="swiper">
             <div class="swiper-wrapper">
               <div class="swiper-slide">
                 <img src="1.webp" alt="item1" />
               </div>
               <div class="swiper-slide">
-                <img src="1.webp" alt="item1" />
+                <img src="2.jpg" alt="item1" />
               </div>
               <div class="swiper-slide">
-                <img src="1.webp" alt="item1" />
+                <img src="3.jpg" alt="item1" />
               </div>
             </div>
             <div class="swiper-pagination"></div>
@@ -87,17 +87,17 @@
           <h5>3199 <span>грн</span></h5>
           <a href="#" class="button-37">Замовити</a>
         </div>
-                <div class="item">
+        <div class="item">
           <div class="swiper">
             <div class="swiper-wrapper">
               <div class="swiper-slide">
                 <img src="1.webp" alt="item1" />
               </div>
               <div class="swiper-slide">
-                <img src="1.webp" alt="item1" />
+                <img src="2.jpg" alt="item1" />
               </div>
               <div class="swiper-slide">
-                <img src="1.webp" alt="item1" />
+                <img src="3.jpg" alt="item1" />
               </div>
             </div>
             <div class="swiper-pagination"></div>
@@ -106,17 +106,17 @@
           <h5>3199 <span>грн</span></h5>
           <a href="#" class="button-37">Замовити</a>
         </div>
-                <div class="item">
+        <div class="item">
           <div class="swiper">
             <div class="swiper-wrapper">
               <div class="swiper-slide">
                 <img src="1.webp" alt="item1" />
               </div>
               <div class="swiper-slide">
-                <img src="1.webp" alt="item1" />
+                <img src="2.jpg" alt="item1" />
               </div>
               <div class="swiper-slide">
-                <img src="1.webp" alt="item1" />
+                <img src="3.jpg" alt="item1" />
               </div>
             </div>
             <div class="swiper-pagination"></div>
@@ -125,17 +125,17 @@
           <h5>3199 <span>грн</span></h5>
           <a href="#" class="button-37">Замовити</a>
         </div>
-                <div class="item">
+        <div class="item">
           <div class="swiper">
             <div class="swiper-wrapper">
               <div class="swiper-slide">
                 <img src="1.webp" alt="item1" />
               </div>
               <div class="swiper-slide">
-                <img src="1.webp" alt="item1" />
+                <img src="2.jpg" alt="item1" />
               </div>
               <div class="swiper-slide">
-                <img src="1.webp" alt="item1" />
+                <img src="3.jpg" alt="item1" />
               </div>
             </div>
             <div class="swiper-pagination"></div>
@@ -144,17 +144,55 @@
           <h5>3199 <span>грн</span></h5>
           <a href="#" class="button-37">Замовити</a>
         </div>
-                <div class="item">
+        <div class="item">
           <div class="swiper">
             <div class="swiper-wrapper">
               <div class="swiper-slide">
                 <img src="1.webp" alt="item1" />
               </div>
               <div class="swiper-slide">
+                <img src="2.jpg" alt="item1" />
+              </div>
+              <div class="swiper-slide">
+                <img src="3.jpg" alt="item1" />
+              </div>
+            </div>
+            <div class="swiper-pagination"></div>
+          </div>
+          <h4>Насадка подвійна LRT5528</h4>
+          <h5>3199 <span>грн</span></h5>
+          <a href="#" class="button-37">Замовити</a>
+        </div>
+        <div class="item">
+          <div class="swiper">
+            <div class="swiper-wrapper">
+              <div class="swiper-slide">
                 <img src="1.webp" alt="item1" />
               </div>
               <div class="swiper-slide">
+                <img src="2.jpg" alt="item1" />
+              </div>
+              <div class="swiper-slide">
+                <img src="3.jpg" alt="item1" />
+              </div>
+            </div>
+            <div class="swiper-pagination"></div>
+          </div>
+          <h4>Насадка подвійна LRT5528</h4>
+          <h5>3199 <span>грн</span></h5>
+          <a href="#" class="button-37">Замовити</a>
+        </div>
+        <div class="item">
+          <div class="swiper">
+            <div class="swiper-wrapper">
+              <div class="swiper-slide">
                 <img src="1.webp" alt="item1" />
+              </div>
+              <div class="swiper-slide">
+                <img src="2.jpg" alt="item1" />
+              </div>
+              <div class="swiper-slide">
+                <img src="3.jpg" alt="item1" />
               </div>
             </div>
             <div class="swiper-pagination"></div>
@@ -165,9 +203,8 @@
         </div>
       </div>
     </div>
-    <footer>
-        <h3>Прийом замовлень: Пн-Нд 9:00-20:00</h3>
-        
+    <footer id="footer">
+      <h3>Прийом замовлень: Пн-Нд 9:00-20:00</h3>
     </footer>
     <!-- <script>
       const burger = document.querySelector("#btn-burger");
