--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           <div class="swiper">
             <div class="swiper-wrapper">
               <div class="swiper-slide">
-                <img src="1.webp" alt="item1" />
+                <img src="1.avif" alt="item1" />
               </div>
               <div class="swiper-slide">
                 <img src="2.jpg" alt="item1" />
@@ -72,7 +72,7 @@
           <div class="swiper">
             <div class="swiper-wrapper">
               <div class="swiper-slide">
-                <img src="1.webp" alt="item1" />
+                <img src="1.avif" alt="item1" />
               </div>
               <div class="swiper-slide">
                 <img src="2.jpg" alt="item1" />
@@ -91,7 +91,7 @@
           <div class="swiper">
             <div class="swiper-wrapper">
               <div class="swiper-slide">
-                <img src="1.webp" alt="item1" />
+                <img src="1.avif" alt="item1" />
               </div>
               <div class="swiper-slide">
                 <img src="2.jpg" alt="item1" />
@@ -110,7 +110,7 @@
           <div class="swiper">
             <div class="swiper-wrapper">
               <div class="swiper-slide">
-                <img src="1.webp" alt="item1" />
+                <img src="1.avif" alt="item1" />
               </div>
               <div class="swiper-slide">
                 <img src="2.jpg" alt="item1" />
@@ -129,7 +129,7 @@
           <div class="swiper">
             <div class="swiper-wrapper">
               <div class="swiper-slide">
-                <img src="1.webp" alt="item1" />
+                <img src="1.avif" alt="item1" />
               </div>
               <div class="swiper-slide">
                 <img src="2.jpg" alt="item1" />
@@ -148,7 +148,7 @@
           <div class="swiper">
             <div class="swiper-wrapper">
               <div class="swiper-slide">
-                <img src="1.webp" alt="item1" />
+                <img src="1.avif" alt="item1" />
               </div>
               <div class="swiper-slide">
                 <img src="2.jpg" alt="item1" />
@@ -167,7 +167,7 @@
           <div class="swiper">
             <div class="swiper-wrapper">
               <div class="swiper-slide">
-                <img src="1.webp" alt="item1" />
+                <img src="1.avif" alt="item1" />
               </div>
               <div class="swiper-slide">
                 <img src="2.jpg" alt="item1" />
@@ -186,7 +186,7 @@
           <div class="swiper">
             <div class="swiper-wrapper">
               <div class="swiper-slide">
-                <img src="1.webp" alt="item1" />
+                <img src="1.avif" alt="item1" />
               </div>
               <div class="swiper-slide">
                 <img src="2.jpg" alt="item1" />
