--- a/index.html
+++ b/index.html
@@ -30,191 +30,373 @@
               <li class="menu__item">
                 <a class="menu__link" href="#">Home</a>
               </li>
-              <!-- <li class="menu__item">
-                <a class="menu__link" href="#">Shop</a>
-              </li> -->
               <li class="menu__item">
                 <a class="menu__link" href="#footer">Contacts</a>
               </li>
             </ul>
           </nav>
         </div>
-        <!-- <button id="btn-burger" class="btn-burger">
-          <span></span>
-          <span></span>
-          <span></span>
-        </button> -->
         <a href="t.me" class="tg-logo"><img src="tg.png" alt="tg" /></a>
       </div>
     </header>
     <div class="container-main">
       <div class="item-row">
-<div class="item">
-          <div class="swiper">
-            <div class="swiper-wrapper">
-              <div class="swiper-slide">
-                <img src="1.avif" alt="item1" />
-              </div>
-              <div class="swiper-slide">
-                <img src="2.jpg" alt="item1" />
-              </div>
-              <div class="swiper-slide">
-                <img src="3.jpg" alt="item1" />
-              </div>
-            </div>
-            <div class="swiper-pagination"></div>
-          </div>
-          <h4>Насадка подвійна LRT5528</h4>
-          <h5>3199 <span>грн</span></h5>
-          <a href="#" class="button-37">Замовити</a>
-        </div>
         <div class="item">
           <div class="swiper">
             <div class="swiper-wrapper">
               <div class="swiper-slide">
-                <img src="1.avif" alt="item1" />
+                <img src="src/3755/1.jpg" alt="item1" />
               </div>
               <div class="swiper-slide">
-                <img src="2.jpg" alt="item1" />
+                <img src="src/3755/2.jpg" alt="item1" />
               </div>
               <div class="swiper-slide">
-                <img src="3.jpg" alt="item1" />
+                <img src="src/3755/3.jpg" alt="item1" />
               </div>
             </div>
             <div class="swiper-pagination"></div>
           </div>
-          <h4>Насадка подвійна LRT5528</h4>
-          <h5>3199 <span>грн</span></h5>
-          <a href="#" class="button-37">Замовити</a>
+          <h2>Насадка подвійна</h2>
+          <div class="option-wrapper">
+            <h4>
+              <span class="item_option">Матеріал: </span>Нержавіюча сталь,
+              карбон
+            </h4>
+            <h4>
+              <span class="item_option">Зовнішня довжина: </span>21.5–24 см
+            </h4>
+            <h4>
+              <span class="item_option"
+                >Внутрішній діаметр посадкового отвору:</span
+              >5.3 см
+            </h4>
+            <h4>
+              <span class="item_option">Зовнішній діаметр на виході:</span>18.5
+              см
+            </h4>
+            <h4>
+              <span class="item_option">Зовнішній діаметр насадки:</span>9 см
+            </h4>
+            <h4><span class="item_option">Артикул:</span>3755</h4>
+          </div>
+          <div class="price-wrapper">
+            <h3>3199 <span>грн</span></h3>
+            <a href="#" class="button-37 buyButton" data-product="3755"
+              >Замовити</a
+            >
+          </div>
         </div>
-        <div class="item">
+                <div class="item">
           <div class="swiper">
             <div class="swiper-wrapper">
               <div class="swiper-slide">
-                <img src="1.avif" alt="item1" />
+                <img src="src/3756/1.jpg" alt="item1" />
               </div>
               <div class="swiper-slide">
-                <img src="2.jpg" alt="item1" />
+                <img src="src/3756/2.jpg" alt="item1" />
               </div>
               <div class="swiper-slide">
-                <img src="3.jpg" alt="item1" />
+                <img src="src/3756/3.jpg" alt="item1" />
               </div>
             </div>
             <div class="swiper-pagination"></div>
           </div>
-          <h4>Насадка подвійна LRT5528</h4>
-          <h5>3199 <span>грн</span></h5>
-          <a href="#" class="button-37">Замовити</a>
+          <h2>Насадка подвійна</h2>
+          <div class="option-wrapper">
+            <h4>
+              <span class="item_option">Матеріал: </span>Нержавіюча сталь,
+              карбон
+            </h4>
+            <h4>
+              <span class="item_option">Зовнішня довжина: </span>21.5–24 см
+            </h4>
+            <h4>
+              <span class="item_option"
+                >Внутрішній діаметр посадкового отвору:</span
+              >5.3 см
+            </h4>
+            <h4>
+              <span class="item_option">Зовнішній діаметр на виході:</span>18.5
+              см
+            </h4>
+            <h4>
+              <span class="item_option">Зовнішній діаметр насадки:</span>9 см
+            </h4>
+            <h4><span class="item_option">Артикул:</span>3756</h4>
+          </div>
+          <div class="price-wrapper">
+            <h3>3199 <span>грн</span></h3>
+            <a href="#" class="button-37 buyButton" data-product="3756"
+              >Замовити</a
+            >
+          </div>
         </div>
-        <div class="item">
+                <div class="item">
           <div class="swiper">
             <div class="swiper-wrapper">
               <div class="swiper-slide">
-                <img src="1.avif" alt="item1" />
+                <img src="src/3757/1.jpg" alt="item1" />
               </div>
               <div class="swiper-slide">
-                <img src="2.jpg" alt="item1" />
+                <img src="src/3757/2.jpg" alt="item1" />
               </div>
               <div class="swiper-slide">
-                <img src="3.jpg" alt="item1" />
+                <img src="src/3757/3.jpg" alt="item1" />
               </div>
             </div>
             <div class="swiper-pagination"></div>
           </div>
-          <h4>Насадка подвійна LRT5528</h4>
-          <h5>3199 <span>грн</span></h5>
-          <a href="#" class="button-37">Замовити</a>
+          <h2>Насадка подвійна</h2>
+          <div class="option-wrapper">
+            <h4>
+              <span class="item_option">Матеріал: </span>Нержавіюча сталь,
+              карбон
+            </h4>
+            <h4>
+              <span class="item_option">Зовнішня довжина: </span>21.5–24 см
+            </h4>
+            <h4>
+              <span class="item_option"
+                >Внутрішній діаметр посадкового отвору:</span
+              >5.3 см
+            </h4>
+            <h4>
+              <span class="item_option">Зовнішній діаметр на виході:</span>18.5
+              см
+            </h4>
+            <h4>
+              <span class="item_option">Зовнішній діаметр насадки:</span>9 см
+            </h4>
+            <h4><span class="item_option">Артикул:</span>3757</h4>
+          </div>
+          <div class="price-wrapper">
+            <h3>3199 <span>грн</span></h3>
+            <a href="#" class="button-37 buyButton" data-product="3757"
+              >Замовити</a
+            >
+          </div>
         </div>
-        <div class="item">
+                <div class="item">
           <div class="swiper">
             <div class="swiper-wrapper">
               <div class="swiper-slide">
-                <img src="1.avif" alt="item1" />
+                <img src="src/3758/1.jpg" alt="item1" />
               </div>
               <div class="swiper-slide">
-                <img src="2.jpg" alt="item1" />
+                <img src="src/3758/2.jpg" alt="item1" />
               </div>
               <div class="swiper-slide">
-                <img src="3.jpg" alt="item1" />
+                <img src="src/3758/3.jpg" alt="item1" />
               </div>
             </div>
             <div class="swiper-pagination"></div>
           </div>
-          <h4>Насадка подвійна LRT5528</h4>
-          <h5>3199 <span>грн</span></h5>
-          <a href="#" class="button-37">Замовити</a>
+          <h2>Насадка подвійна</h2>
+          <div class="option-wrapper">
+            <h4>
+              <span class="item_option">Матеріал: </span>Нержавіюча сталь,
+              карбон
+            </h4>
+            <h4>
+              <span class="item_option">Зовнішня довжина: </span>21.5–24 см
+            </h4>
+            <h4>
+              <span class="item_option"
+                >Внутрішній діаметр посадкового отвору:</span
+              >5.3 см
+            </h4>
+            <h4>
+              <span class="item_option">Зовнішній діаметр на виході:</span>18.5
+              см
+            </h4>
+            <h4>
+              <span class="item_option">Зовнішній діаметр насадки:</span>9 см
+            </h4>
+            <h4><span class="item_option">Артикул:</span>3758</h4>
+          </div>
+          <div class="price-wrapper">
+            <h3>3199 <span>грн</span></h3>
+            <a href="#" class="button-37 buyButton" data-product="3758"
+              >Замовити</a
+            >
+          </div>
         </div>
-        <div class="item">
+                <div class="item">
           <div class="swiper">
             <div class="swiper-wrapper">
               <div class="swiper-slide">
-                <img src="1.avif" alt="item1" />
+                <img src="src/4104/1.jpg" alt="item1" />
               </div>
               <div class="swiper-slide">
-                <img src="2.jpg" alt="item1" />
+                <img src="src/4104/2.jpg" alt="item1" />
               </div>
               <div class="swiper-slide">
-                <img src="3.jpg" alt="item1" />
+                <img src="src/4104/3.jpg" alt="item1" />
               </div>
             </div>
             <div class="swiper-pagination"></div>
           </div>
-          <h4>Насадка подвійна LRT5528</h4>
-          <h5>3199 <span>грн</span></h5>
-          <a href="#" class="button-37">Замовити</a>
+          <h2>Насадка подвійна</h2>
+          <div class="option-wrapper">
+            <h4>
+              <span class="item_option">Матеріал: </span>Нержавіюча сталь,
+              карбон
+            </h4>
+            <h4>
+              <span class="item_option">Зовнішня довжина: </span>21.5–24 см
+            </h4>
+            <h4>
+              <span class="item_option"
+                >Внутрішній діаметр посадкового отвору:</span
+              >5.3 см
+            </h4>
+            <h4>
+              <span class="item_option">Зовнішній діаметр на виході:</span>18.5
+              см
+            </h4>
+            <h4>
+              <span class="item_option">Зовнішній діаметр насадки:</span>9 см
+            </h4>
+            <h4><span class="item_option">Артикул:</span>4104</h4>
+          </div>
+          <div class="price-wrapper">
+            <h3>3199 <span>грн</span></h3>
+            <a href="#" class="button-37 buyButton" data-product="4104"
+              >Замовити</a
+            >
+          </div>
         </div>
-        <div class="item">
+                <div class="item">
           <div class="swiper">
             <div class="swiper-wrapper">
               <div class="swiper-slide">
-                <img src="1.avif" alt="item1" />
+                <img src="src/4106/1.jpg" alt="item1" />
               </div>
               <div class="swiper-slide">
-                <img src="2.jpg" alt="item1" />
+                <img src="src/4106/2.jpg" alt="item1" />
               </div>
               <div class="swiper-slide">
-                <img src="3.jpg" alt="item1" />
+                <img src="src/4106/3.jpg" alt="item1" />
               </div>
             </div>
             <div class="swiper-pagination"></div>
           </div>
-          <h4>Насадка подвійна LRT5528</h4>
-          <h5>3199 <span>грн</span></h5>
-          <a href="#" class="button-37">Замовити</a>
+          <h2>Насадка подвійна</h2>
+          <div class="option-wrapper">
+            <h4>
+              <span class="item_option">Матеріал: </span>Нержавіюча сталь,
+              карбон
+            </h4>
+            <h4>
+              <span class="item_option">Зовнішня довжина: </span>21.5–24 см
+            </h4>
+            <h4>
+              <span class="item_option"
+                >Внутрішній діаметр посадкового отвору:</span
+              >5.3 см
+            </h4>
+            <h4>
+              <span class="item_option">Зовнішній діаметр на виході:</span>18.5
+              см
+            </h4>
+            <h4>
+              <span class="item_option">Зовнішній діаметр насадки:</span>9 см
+            </h4>
+            <h4><span class="item_option">Артикул:</span>4106</h4>
+          </div>
+          <div class="price-wrapper">
+            <h3>3199 <span>грн</span></h3>
+            <a href="#" class="button-37 buyButton" data-product="4106"
+              >Замовити</a
+            >
+          </div>
         </div>
-        <div class="item">
+                <div class="item">
           <div class="swiper">
             <div class="swiper-wrapper">
               <div class="swiper-slide">
-                <img src="1.avif" alt="item1" />
+                <img src="src/4194/1.jpg" alt="item1" />
               </div>
               <div class="swiper-slide">
-                <img src="2.jpg" alt="item1" />
+                <img src="src/4194/2.jpg" alt="item1" />
               </div>
               <div class="swiper-slide">
-                <img src="3.jpg" alt="item1" />
+                <img src="src/4194/3.jpg" alt="item1" />
               </div>
             </div>
             <div class="swiper-pagination"></div>
           </div>
-          <h4>Насадка подвійна LRT5528</h4>
-          <h5>3199 <span>грн</span></h5>
-          <a href="#" class="button-37">Замовити</a>
+          <h2>Насадка подвійна</h2>
+          <div class="option-wrapper">
+            <h4>
+              <span class="item_option">Матеріал: </span>Нержавіюча сталь,
+              карбон
+            </h4>
+            <h4>
+              <span class="item_option">Зовнішня довжина: </span>21.5–24 см
+            </h4>
+            <h4>
+              <span class="item_option"
+                >Внутрішній діаметр посадкового отвору:</span
+              >5.3 см
+            </h4>
+            <h4>
+              <span class="item_option">Зовнішній діаметр на виході:</span>18.5
+              см
+            </h4>
+            <h4>
+              <span class="item_option">Зовнішній діаметр насадки:</span>9 см
+            </h4>
+            <h4><span class="item_option">Артикул:</span>4194</h4>
+          </div>
+          <div class="price-wrapper">
+            <h3>3199 <span>грн</span></h3>
+            <a href="#" class="button-37 buyButton" data-product="4194"
+              >Замовити</a
+            >
+          </div>
         </div>
       </div>
     </div>
     <footer id="footer">
-      <h3>Прийом замовлень: Пн-Нд 9:00-20:00</h3>
-    </footer>
-    <!-- <script>
-      const burger = document.querySelector("#btn-burger");
-      const mobileContainer = document.querySelector("#mobile-container");
+      <h2>Прийом замовлень: Пн-Нд 9:00-20:00</h2>
+      <div id="orderModal" class="modal">
+        <div class="modal-content">
+          <span class="close">&times;</span>
+          <h2>Оформити замовлення</h2>
+          <form id="orderForm">
+            <label for="productName">Обраний товар:</label>
+            <input type="text" id="productName" name="productName" readonly />
+            <div class="form-group">
+              <label for="firstName">Им'я:</label>
+              <input type="text" id="firstName" name="firstName" required />
+            </div>
 
-      burger.addEventListener("click", () => {
-        burger.classList.toggle("active");
-        mobileContainer.classList.toggle("show");
-      });
-    </script> -->
+            <div class="form-group">
+              <label for="lastName">Прізвище:</label>
+              <input type="text" id="lastName" name="lastName" required />
+            </div>
+
+            <div class="form-group">
+              <label for="phone">Номер телефону:</label>
+              <input type="tel" id="phone" name="phone" required />
+            </div>
+
+            <div class="form-group">
+              <label for="address">Адреса доставки:</label>
+              <textarea
+                id="address"
+                name="address"
+                rows="3"
+                required
+              ></textarea>
+            </div>
+
+            <button type="submit">Замовити</button>
+          </form>
+        </div>
+      </div>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script>
       const swiper = new Swiper(".swiper", {
@@ -224,6 +406,65 @@
           el: ".swiper-pagination",
         },
       });
+    </script>
+    <script>
+      // Открытие модалки по нажатию на любую кнопку "Купить"
+      document.querySelectorAll(".buyButton").forEach((button) => {
+        button.addEventListener("click", function () {
+          const productName = this.getAttribute("data-product");
+          document.getElementById("productName").value = productName;
+          document.getElementById("orderModal").style.display = "block";
+        });
+      });
+
+      // Закрытие модалки
+      document.getElementsByClassName("close")[0].onclick = function () {
+        document.getElementById("orderModal").style.display = "none";
+      };
+
+      // Закрытие по клику вне модального окна
+      window.onclick = function (event) {
+        if (event.target == document.getElementById("orderModal")) {
+          document.getElementById("orderModal").style.display = "none";
+        }
+      };
+
+      // Отправка формы
+      document.getElementById("orderForm").onsubmit = function (e) {
+        e.preventDefault();
+
+        const formData = {
+          productName: document.getElementById("productName").value,
+          firstName: document.getElementById("firstName").value,
+          lastName: document.getElementById("lastName").value,
+          phone: document.getElementById("phone").value,
+          address: document.getElementById("address").value,
+          timestamp: new Date().toLocaleString(),
+        };
+
+        fetch(
+          "https://script.google.com/macros/s/AKfycbzs4-jpHtDKa1ZnvdE7VCwq9Vuc4tJc82Owt9FvvBXW2frK3Waz9G-dynI5I4PKBdH9IQ/exec",
+          {
+            method: "POST",
+            mode: "no-cors",
+            headers: {
+              "Content-Type": "application/json",
+            },
+            body: JSON.stringify(formData),
+          }
+        )
+          .then(() => {
+            alert("Ваш заказ принят! Мы свяжемся с вами в ближайшее время.");
+            document.getElementById("orderForm").reset();
+            document.getElementById("orderModal").style.display = "none";
+          })
+          .catch((error) => {
+            console.error("Error:", error);
+            alert(
+              "Произошла ошибка при отправке формы. Пожалуйста, попробуйте еще раз."
+            );
+          });
+      };
     </script>
   </body>
 </html>
