--- a/index.html
+++ b/index.html
@@ -58,25 +58,11 @@
           </div>
           <h2>Насадка подвійна</h2>
           <div class="option-wrapper">
-            <h4>
-              <span class="item_option">Матеріал: </span>Нержавіюча сталь,
-              карбон
-            </h4>
-            <h4>
-              <span class="item_option">Зовнішня довжина: </span>21.5–24 см
-            </h4>
-            <h4>
-              <span class="item_option"
-                >Внутрішній діаметр посадкового отвору:</span
-              >5.3 см
-            </h4>
-            <h4>
-              <span class="item_option">Зовнішній діаметр на виході:</span>18.5
-              см
-            </h4>
-            <h4>
-              <span class="item_option">Зовнішній діаметр насадки:</span>9 см
-            </h4>
+    <h4><span class="item_option">Матеріал: </span>Нержавіюча сталь,карбон</h4>
+    <h4><span class="item_option">Зовнішня довжина: </span>21.5–24 см</h4>
+    <h4><span class="item_option">Внутрішній діаметр посадкового отвору:</span>5.3 см</h4>
+    <h4><span class="item_option">Зовнішній діаметр на виході:</span>18.5см</h4>
+    <h4><span class="item_option">Зовнішній діаметр насадки:</span>9 см</h4>
             <h4><span class="item_option">Артикул:</span>3755</h4>
           </div>
           <div class="price-wrapper">
@@ -103,25 +89,11 @@
           </div>
           <h2>Насадка подвійна</h2>
           <div class="option-wrapper">
-            <h4>
-              <span class="item_option">Матеріал: </span>Нержавіюча сталь,
-              карбон
-            </h4>
-            <h4>
-              <span class="item_option">Зовнішня довжина: </span>21.5–24 см
-            </h4>
-            <h4>
-              <span class="item_option"
-                >Внутрішній діаметр посадкового отвору:</span
-              >5.3 см
-            </h4>
-            <h4>
-              <span class="item_option">Зовнішній діаметр на виході:</span>18.5
-              см
-            </h4>
-            <h4>
-              <span class="item_option">Зовнішній діаметр насадки:</span>9 см
-            </h4>
+    <h4><span class="item_option">Матеріал: </span>Нержавіюча сталь,карбон</h4>
+    <h4><span class="item_option">Зовнішня довжина: </span>19.5–24 см</h4>
+    <h4><span class="item_option">Внутрішній діаметр посадкового отвору:</span>6.3 см</h4>
+    <h4><span class="item_option">Зовнішній діаметр на виході:</span>22 см</h4>
+    <h4><span class="item_option">Зовнішній діаметр насадки:</span>9 см</h4>
             <h4><span class="item_option">Артикул:</span>3756</h4>
           </div>
           <div class="price-wrapper">
@@ -148,25 +120,11 @@
           </div>
           <h2>Насадка подвійна</h2>
           <div class="option-wrapper">
-            <h4>
-              <span class="item_option">Матеріал: </span>Нержавіюча сталь,
-              карбон
-            </h4>
-            <h4>
-              <span class="item_option">Зовнішня довжина: </span>21.5–24 см
-            </h4>
-            <h4>
-              <span class="item_option"
-                >Внутрішній діаметр посадкового отвору:</span
-              >5.3 см
-            </h4>
-            <h4>
-              <span class="item_option">Зовнішній діаметр на виході:</span>18.5
-              см
-            </h4>
-            <h4>
-              <span class="item_option">Зовнішній діаметр насадки:</span>9 см
-            </h4>
+    <h4><span class="item_option">Матеріал: </span>Нержавіюча сталь,карбон</h4>
+    <h4><span class="item_option">Зовнішня довжина: </span>22,5–24,5 см</h4>
+    <h4><span class="item_option">Внутрішній діаметр посадкового отвору:</span>6.3 см</h4>
+    <h4><span class="item_option">Зовнішній діаметр на виході:</span>18.5см</h4>
+    <h4><span class="item_option">Зовнішній діаметр насадки:</span>9 см</h4>
             <h4><span class="item_option">Артикул:</span>3757</h4>
           </div>
           <div class="price-wrapper">
@@ -193,25 +151,11 @@
           </div>
           <h2>Насадка подвійна</h2>
           <div class="option-wrapper">
-            <h4>
-              <span class="item_option">Матеріал: </span>Нержавіюча сталь,
-              карбон
-            </h4>
-            <h4>
-              <span class="item_option">Зовнішня довжина: </span>21.5–24 см
-            </h4>
-            <h4>
-              <span class="item_option"
-                >Внутрішній діаметр посадкового отвору:</span
-              >5.3 см
-            </h4>
-            <h4>
-              <span class="item_option">Зовнішній діаметр на виході:</span>18.5
-              см
-            </h4>
-            <h4>
-              <span class="item_option">Зовнішній діаметр насадки:</span>9 см
-            </h4>
+    <h4><span class="item_option">Матеріал: </span>Нержавіюча сталь,карбон</h4>
+    <h4><span class="item_option">Зовнішня довжина: </span>24.5–26.5 см</h4>
+    <h4><span class="item_option">Внутрішній діаметр посадкового отвору:</span>5.3 см</h4>
+    <h4><span class="item_option">Зовнішній діаметр на виході:</span>17 см</h4>
+    <h4><span class="item_option">Зовнішній діаметр насадки:</span>6.7 см</h4>
             <h4><span class="item_option">Артикул:</span>3758</h4>
           </div>
           <div class="price-wrapper">
@@ -238,25 +182,11 @@
           </div>
           <h2>Насадка подвійна</h2>
           <div class="option-wrapper">
-            <h4>
-              <span class="item_option">Матеріал: </span>Нержавіюча сталь,
-              карбон
-            </h4>
-            <h4>
-              <span class="item_option">Зовнішня довжина: </span>21.5–24 см
-            </h4>
-            <h4>
-              <span class="item_option"
-                >Внутрішній діаметр посадкового отвору:</span
-              >5.3 см
-            </h4>
-            <h4>
-              <span class="item_option">Зовнішній діаметр на виході:</span>18.5
-              см
-            </h4>
-            <h4>
-              <span class="item_option">Зовнішній діаметр насадки:</span>9 см
-            </h4>
+    <h4><span class="item_option">Матеріал: </span>Нержавіюча сталь,карбон</h4>
+    <h4><span class="item_option">Зовнішня довжина: </span>23.5 см</h4>
+    <h4><span class="item_option">Внутрішній діаметр посадкового отвору:</span>6.5 см</h4>
+    <h4><span class="item_option">Зовнішній діаметр на виході:</span>21 см</h4>
+    <h4><span class="item_option">Зовнішній діаметр насадки:</span>9.5 см</h4>
             <h4><span class="item_option">Артикул:</span>4104</h4>
           </div>
           <div class="price-wrapper">
@@ -283,25 +213,11 @@
           </div>
           <h2>Насадка подвійна</h2>
           <div class="option-wrapper">
-            <h4>
-              <span class="item_option">Матеріал: </span>Нержавіюча сталь,
-              карбон
-            </h4>
-            <h4>
-              <span class="item_option">Зовнішня довжина: </span>21.5–24 см
-            </h4>
-            <h4>
-              <span class="item_option"
-                >Внутрішній діаметр посадкового отвору:</span
-              >5.3 см
-            </h4>
-            <h4>
-              <span class="item_option">Зовнішній діаметр на виході:</span>18.5
-              см
-            </h4>
-            <h4>
-              <span class="item_option">Зовнішній діаметр насадки:</span>9 см
-            </h4>
+    <h4><span class="item_option">Матеріал: </span>Нержавіюча сталь,карбон</h4>
+    <h4><span class="item_option">Зовнішня довжина: </span>23,5 см</h4>
+    <h4><span class="item_option">Внутрішній діаметр посадкового отвору:</span>6.5 см</h4>
+    <h4><span class="item_option">Зовнішній діаметр на виході:</span>21 см</h4>
+    <h4><span class="item_option">Зовнішній діаметр насадки:</span>9.5 см</h4>
             <h4><span class="item_option">Артикул:</span>4106</h4>
           </div>
           <div class="price-wrapper">
@@ -328,25 +244,11 @@
           </div>
           <h2>Насадка подвійна</h2>
           <div class="option-wrapper">
-            <h4>
-              <span class="item_option">Матеріал: </span>Нержавіюча сталь,
-              карбон
-            </h4>
-            <h4>
-              <span class="item_option">Зовнішня довжина: </span>21.5–24 см
-            </h4>
-            <h4>
-              <span class="item_option"
-                >Внутрішній діаметр посадкового отвору:</span
-              >5.3 см
-            </h4>
-            <h4>
-              <span class="item_option">Зовнішній діаметр на виході:</span>18.5
-              см
-            </h4>
-            <h4>
-              <span class="item_option">Зовнішній діаметр насадки:</span>9 см
-            </h4>
+    <h4><span class="item_option">Матеріал: </span>Нержавіюча сталь,карбон</h4>
+    <h4><span class="item_option">Зовнішня довжина: </span>24.5–26.5 см</h4>
+    <h4><span class="item_option">Внутрішній діаметр посадкового отвору:</span>5.3 см</h4>
+    <h4><span class="item_option">Зовнішній діаметр на виході:</span>17 см</h4>
+    <h4><span class="item_option">Зовнішній діаметр насадки:</span>6.7 см</h4>
             <h4><span class="item_option">Артикул:</span>4194</h4>
           </div>
           <div class="price-wrapper">
@@ -408,7 +310,7 @@
       });
     </script>
     <script>
-      // Открытие модалки по нажатию на любую кнопку "Купить"
+
       document.querySelectorAll(".buyButton").forEach((button) => {
         button.addEventListener("click", function () {
           const productName = this.getAttribute("data-product");
@@ -417,19 +319,17 @@
         });
       });
 
-      // Закрытие модалки
+
       document.getElementsByClassName("close")[0].onclick = function () {
         document.getElementById("orderModal").style.display = "none";
       };
 
-      // Закрытие по клику вне модального окна
       window.onclick = function (event) {
         if (event.target == document.getElementById("orderModal")) {
           document.getElementById("orderModal").style.display = "none";
         }
       };
 
-      // Отправка формы
       document.getElementById("orderForm").onsubmit = function (e) {
         e.preventDefault();
 
