--- a/index.html
+++ b/index.html
@@ -28,15 +28,12 @@
           <nav class="menu">
             <ul class="menu__list">
               <li class="menu__item">
-                <a class="menu__link" href="#">Home</a>
-              </li>
-              <li class="menu__item">
                 <a class="menu__link" href="#footer">Contacts</a>
               </li>
             </ul>
           </nav>
         </div>
-        <a href="t.me" class="tg-logo"><img src="tg.png" alt="tg" /></a>
+        <a href="https://t.me/akrapovic_kiev_ua" target="_blank" class="tg-logo"><img src="tg.png" alt="tg" /></a>
       </div>
     </header>
     <div class="container-main">
@@ -63,7 +60,7 @@
           </div>
           <h2>Насадка подвійна</h2>
           <div class="option-wrapper">
-    <h4><span class="item_option">Матеріал: </span>Нержавіюча сталь,карбон</h4>
+    <h4><span class="item_option">Матеріал: </span>Нержавіюча сталь, карбон</h4>
     <h4><span class="item_option">Зовнішня довжина: </span>21.5–24 см</h4>
     <h4><span class="item_option">Внутрішній діаметр посадкового отвору:</span>5.3 см</h4>
     <h4><span class="item_option">Зовнішній діаметр на виході:</span>18.5см</h4>
@@ -94,7 +91,7 @@
           </div>
           <h2>Насадка подвійна</h2>
           <div class="option-wrapper">
-    <h4><span class="item_option">Матеріал: </span>Нержавіюча сталь,карбон</h4>
+    <h4><span class="item_option">Матеріал: </span>Нержавіюча сталь, карбон</h4>
     <h4><span class="item_option">Зовнішня довжина: </span>19.5–24 см</h4>
     <h4><span class="item_option">Внутрішній діаметр посадкового отвору:</span>6.3 см</h4>
     <h4><span class="item_option">Зовнішній діаметр на виході:</span>22 см</h4>
@@ -125,7 +122,7 @@
           </div>
           <h2>Насадка подвійна</h2>
           <div class="option-wrapper">
-    <h4><span class="item_option">Матеріал: </span>Нержавіюча сталь,карбон</h4>
+    <h4><span class="item_option">Матеріал: </span>Нержавіюча сталь, карбон</h4>
     <h4><span class="item_option">Зовнішня довжина: </span>22,5–24,5 см</h4>
     <h4><span class="item_option">Внутрішній діаметр посадкового отвору:</span>6.3 см</h4>
     <h4><span class="item_option">Зовнішній діаметр на виході:</span>18.5см</h4>
@@ -156,7 +153,7 @@
           </div>
           <h2>Насадка подвійна</h2>
           <div class="option-wrapper">
-    <h4><span class="item_option">Матеріал: </span>Нержавіюча сталь,карбон</h4>
+    <h4><span class="item_option">Матеріал: </span>Нержавіюча сталь, карбон</h4>
     <h4><span class="item_option">Зовнішня довжина: </span>24.5–26.5 см</h4>
     <h4><span class="item_option">Внутрішній діаметр посадкового отвору:</span>5.3 см</h4>
     <h4><span class="item_option">Зовнішній діаметр на виході:</span>17 см</h4>
@@ -187,7 +184,7 @@
           </div>
           <h2>Насадка подвійна</h2>
           <div class="option-wrapper">
-    <h4><span class="item_option">Матеріал: </span>Нержавіюча сталь,карбон</h4>
+    <h4><span class="item_option">Матеріал: </span>Нержавіюча сталь, карбон</h4>
     <h4><span class="item_option">Зовнішня довжина: </span>23.5 см</h4>
     <h4><span class="item_option">Внутрішній діаметр посадкового отвору:</span>6.5 см</h4>
     <h4><span class="item_option">Зовнішній діаметр на виході:</span>21 см</h4>
@@ -218,7 +215,7 @@
           </div>
           <h2>Насадка подвійна</h2>
           <div class="option-wrapper">
-    <h4><span class="item_option">Матеріал: </span>Нержавіюча сталь,карбон</h4>
+    <h4><span class="item_option">Матеріал: </span>Нержавіюча сталь, карбон</h4>
     <h4><span class="item_option">Зовнішня довжина: </span>23,5 см</h4>
     <h4><span class="item_option">Внутрішній діаметр посадкового отвору:</span>6.5 см</h4>
     <h4><span class="item_option">Зовнішній діаметр на виході:</span>21 см</h4>
@@ -249,7 +246,7 @@
           </div>
           <h2>Насадка подвійна</h2>
           <div class="option-wrapper">
-    <h4><span class="item_option">Матеріал: </span>Нержавіюча сталь,карбон</h4>
+    <h4><span class="item_option">Матеріал: </span>Нержавіюча сталь, карбон</h4>
     <h4><span class="item_option">Зовнішня довжина: </span>24.5–26.5 см</h4>
     <h4><span class="item_option">Внутрішній діаметр посадкового отвору:</span>5.3 см</h4>
     <h4><span class="item_option">Зовнішній діаметр на виході:</span>17 см</h4>
