--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </header>
     <div class="container-main">
       <div class="filter-buttons">
-  <button class="filter-btn active" data-filter="all">Всі товари</button>
+  <button class="filter-btn active" data-filter="all">Всі</button>
   <button class="filter-btn" data-filter="подвійна">Подвійні</button>
   <button class="filter-btn" data-filter="одинарна">Одинарні</button>
 </div>
