--- a/index.html
+++ b/index.html
@@ -76,16 +76,16 @@
           </div>
         </div>
                 <div class="item">
-          <div class="swiper">
+          <div class="swiper lightgallery-swiper">
             <div class="swiper-wrapper">
               <div class="swiper-slide">
-                <img src="src/3756/1.jpg" alt="item1" />
+                <a href="src/3756/1.jpg"><img src="src/3756/1.jpg" alt="item1" /></a>
               </div>
               <div class="swiper-slide">
-                <img src="src/3756/2.jpg" alt="item1" />
+                <a href="src/3756/2.jpg"><img src="src/3756/2.jpg" alt="item1" /></a>
               </div>
               <div class="swiper-slide">
-                <img src="src/3756/3.jpg" alt="item1" />
+                <a href="src/3756/3.jpg"><img src="src/3756/3.jpg" alt="item1" /></a>
               </div>
             </div>
             <div class="swiper-pagination"></div>
@@ -107,16 +107,16 @@
           </div>
         </div>
                 <div class="item">
-          <div class="swiper">
+          <div class="swiper lightgallery-swiper">
             <div class="swiper-wrapper">
               <div class="swiper-slide">
-                <img src="src/3757/1.jpg" alt="item1" />
+                <a href="src/3757/1.jpg"><img src="src/3757/1.jpg" alt="item1" /></a>
               </div>
               <div class="swiper-slide">
-                <img src="src/3757/2.jpg" alt="item1" />
+                <a href="src/3757/2.jpg"><img src="src/3757/2.jpg" alt="item1" /></a>
               </div>
               <div class="swiper-slide">
-                <img src="src/3757/3.jpg" alt="item1" />
+                <a href="src/3757/3.jpg"><img src="src/3757/3.jpg" alt="item1" /></a>
               </div>
             </div>
             <div class="swiper-pagination"></div>
@@ -138,16 +138,16 @@
           </div>
         </div>
                 <div class="item">
-          <div class="swiper">
+          <div class="swiper lightgallery-swiper">
             <div class="swiper-wrapper">
               <div class="swiper-slide">
-                <img src="src/3758/1.jpg" alt="item1" />
+                <a href="src/3758/1.jpg"><img src="src/3758/1.jpg" alt="item1" /></a>
               </div>
               <div class="swiper-slide">
-                <img src="src/3758/2.jpg" alt="item1" />
+                <a href="src/3758/2.jpg"><img src="src/3758/2.jpg" alt="item1" /></a>
               </div>
               <div class="swiper-slide">
-                <img src="src/3758/3.jpg" alt="item1" />
+                <a href="src/3758/3.jpg"><img src="src/3758/3.jpg" alt="item1" /></a>
               </div>
             </div>
             <div class="swiper-pagination"></div>
@@ -169,16 +169,16 @@
           </div>
         </div>
                 <div class="item">
-          <div class="swiper">
+          <div class="swiper lightgallery-swiper">
             <div class="swiper-wrapper">
               <div class="swiper-slide">
-                <img src="src/4104/1.jpg" alt="item1" />
+                <a href="src/4104/1.jpg"><img src="src/4104/1.jpg" alt="item1" /></a>
               </div>
               <div class="swiper-slide">
-                <img src="src/4104/2.jpg" alt="item1" />
+                <a href="src/4104/2.jpg"><img src="src/4104/2.jpg" alt="item1" /></a>
               </div>
               <div class="swiper-slide">
-                <img src="src/4104/3.jpg" alt="item1" />
+                <a href="src/4104/3.jpg"><img src="src/4104/3.jpg" alt="item1" /></a>
               </div>
             </div>
             <div class="swiper-pagination"></div>
@@ -200,16 +200,16 @@
           </div>
         </div>
                 <div class="item">
-          <div class="swiper">
+          <div class="swiper lightgallery-swiper">
             <div class="swiper-wrapper">
               <div class="swiper-slide">
-                <img src="src/4106/1.jpg" alt="item1" />
+                <a href="src/4106/1.jpg"><img src="src/4106/1.jpg" alt="item1" /></a>
               </div>
               <div class="swiper-slide">
-                <img src="src/4106/2.jpg" alt="item1" />
+                <a href="src/4106/2.jpg"><img src="src/4106/2.jpg" alt="item1" /></a>
               </div>
               <div class="swiper-slide">
-                <img src="src/4106/3.jpg" alt="item1" />
+                <a href="src/4106/3.jpg"><img src="src/4106/3.jpg" alt="item1" /></a>
               </div>
             </div>
             <div class="swiper-pagination"></div>
@@ -231,16 +231,16 @@
           </div>
         </div>
                 <div class="item">
-          <div class="swiper">
+          <div class="swiper lightgallery-swiper">
             <div class="swiper-wrapper">
               <div class="swiper-slide">
-                <img src="src/4194/1.jpg" alt="item1" />
+                <a href="src/4194/1.jpg"><img src="src/4194/1.jpg" alt="item1" /></a>
               </div>
               <div class="swiper-slide">
-                <img src="src/4194/2.jpg" alt="item1" />
+                <a href="src/4194/2.jpg"><img src="src/4194/2.jpg" alt="item1" /></a>
               </div>
               <div class="swiper-slide">
-                <img src="src/4194/3.jpg" alt="item1" />
+                <a href="src/4194/3.jpg"><img src="src/4194/3.jpg" alt="item1" /></a>
               </div>
             </div>
             <div class="swiper-pagination"></div>
